tests/ui/c-variadic/variadic-ffi-2.stderr
error[E0045]: C-variadic functions with the "Rust" calling convention are not supported
  --> $DIR/variadic-ffi-2.rs:3:11
   |
LL | fn baz(f: extern "Rust" fn(usize, ...)) {
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ C-variadic function must have a compatible calling convention

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0045`.
